--- a/source/form.html
+++ b/source/form.html
@@ -27,7 +27,7 @@
       </button>
     </div>
     <!--navigation-->
-    <nav class="main-nav">
+    <nav class="main-nav main-nav--closed">
       <ul class="main-nav__list">
         <li class="main-nav__item main-nav__item--current">
           <a class="main-nav__link" href="./index.html">Главная</a>
