планшетная версия главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -58,13 +58,15 @@
       <div class="programs">
         <div class="programs__card">
           <h2 class="programs__card-title programs__card-title--slim">похудение</h2>
-          <span class="programs__card-description">Ваш кот весит больше собаки и почти утратил способность лазить по
+          <span class="programs__card-description programs__card-description--slim">Ваш кот весит больше собаки и почти
+            утратил способность лазить по
             деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</span>
           <a class="programs__card-link" href="./catalog.html">каталог slim</a>
         </div>
         <div class="programs__card">
           <h2 class="programs__card-title programs__card-title--mass">набор массы</h2>
-          <span class="programs__card-description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat
+          <span class="programs__card-description programs__card-description--mass">Заработать авторитет среди дворовых
+            котов и даже собак? Серия Cat
             Energy
             Pro поможет вашему коту нарастить необходимые мышцы!</span>
           <a class="programs__card-link" href="./catalog.html">каталог pro</a>
@@ -109,17 +111,19 @@
             Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и
             по-прежнему спит по 16 часов в день.</span>
         </div>
-        <div class="example-cards">
-          <div class="example-cards__item example-card">
-            <h3 class="example-card__title">5 кг</h3>
-            <span class="example-card__description">снижение<br>веса</span>
+        <div class="example-cards-wrapper">
+          <div class="example-cards">
+            <div class="example-cards__item example-card">
+              <h3 class="example-card__title">5 кг</h3>
+              <span class="example-card__description">снижение веса</span>
+            </div>
+            <div class="example-cards__item example-card">
+              <h3 class="example-card__title">60 дней</h3>
+              <span class="example-card__description">затрачено времени</span>
+            </div>
           </div>
-          <div class="example-cards__item example-card">
-            <h3 class="example-card__title">60 дней</h3>
-            <span class="example-card__description">затрачено<br>времени</span>
-          </div>
+          <span class="example-cards__item example-costs">затраты на питание: 15 000 руб.</span>
         </div>
-        <span class="example-cards__item example-costs">затраты на питание: 15 000 руб.</span>
         <div class="example-cards__item cat-slider">
           <div class="cat-slider__scale">
             <button class="cat-slider__toggle" type="button">
@@ -139,9 +143,9 @@
           <span class="contacts__description-text">Санкт-Петербург</span>
         </div>
         <!--вот тут пока что не понятно как сделать дополнительный перенос строки только для планшетной версии-->
-        <div class="map">
-          <span class="visually-hidden">наше расположение на карте</span>
-        </div>
+      </div>
+      <div class="map">
+        <span class="visually-hidden">наше расположение на карте</span>
       </div>
     </section>
   </main>
