--- a/source/catalog.html
+++ b/source/catalog.html
@@ -29,11 +29,11 @@
     <!--navigation-->
     <nav class="main-nav main-nav-closed">
       <ul class="main-nav__list">
-        <li class="main-nav__item main-nav__item--current">
+        <li class="main-nav__item">
           <a class="main-nav__link" href="./index.html">Главная</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link" href="#">Каталог продукции</a>
+          <a class="main-nav__link main-nav__link--current" href="#">Каталог продукции</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link" href="./form.html">Подбор программы</a>
@@ -246,7 +246,7 @@
             <div class="product__details">
               <h2 class="product-last__title">Показать еще 100500 товаров</h2>
               <div class="product-last__description">
-                <div class="product-text">
+                <div class="product-text product-text--last">
                   <span class="product-text__item">На самом деле вкусов гораздо больше!</span>
                 </div>
               </div>
@@ -313,17 +313,18 @@
       </div>
     </section>
     <!--contacts-->
-    <section class="contacts contacts--grey">
+    <section class="contacts">
       <div class="contacts__wrapper">
         <h2 class="contacts__title">приглашаем<br>к сотрудничеству<br>дилеров!</h2>
         <div class="contacts__description">
           <span class="contacts__description-text">ул. Большая Конюшенная, д. 19/8</span>
           <br class="tablet-version-transfer">
           <span class="contacts__description-text">Санкт-Петербург</span>
-        </div> <!--вот тут пока что не понятно как сделать дополнительный перенос строки только для планшетной версии-->
-        <div class="map">
-          <span class="visually-hidden">наше расположение на карте</span>
         </div>
+        <!--вот тут пока что не понятно как сделать дополнительный перенос строки только для планшетной версии-->
+      </div>
+      <div class="map">
+        <span class="visually-hidden">наше расположение на карте</span>
       </div>
     </section>
   </main>
