--- a/source/form.html
+++ b/source/form.html
@@ -29,14 +29,14 @@
     <!--navigation-->
     <nav class="main-nav main-nav-closed">
       <ul class="main-nav__list">
-        <li class="main-nav__item main-nav__item--current">
+        <li class="main-nav__item">
           <a class="main-nav__link" href="./index.html">Главная</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link" href="./catalog.html">Каталог продукции</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link" href="#">Подбор программы</a>
+          <a class="main-nav__link main-nav__link--current" href="#">Подбор программы</a>
         </li>
       </ul>
     </nav>
@@ -129,17 +129,18 @@
       </form>
     </div>
     <!--contacts-->
-    <section class="contacts contacts--grey">
+    <section class="contacts">
       <div class="contacts__wrapper">
         <h2 class="contacts__title">приглашаем<br>к сотрудничеству<br>дилеров!</h2>
         <div class="contacts__description">
           <span class="contacts__description-text">ул. Большая Конюшенная, д. 19/8</span>
           <br class="tablet-version-transfer">
           <span class="contacts__description-text">Санкт-Петербург</span>
-        </div> <!--вот тут пока что не понятно как сделать дополнительный перенос строки только для планшетной версии-->
-        <div class="map">
-          <span class="visually-hidden">наше расположение на карте</span>
         </div>
+        <!--вот тут пока что не понятно как сделать дополнительный перенос строки только для планшетной версии-->
+      </div>
+      <div class="map">
+        <span class="visually-hidden">наше расположение на карте</span>
       </div>
     </section>
   </main>
