--- a/source/index.html
+++ b/source/index.html
@@ -29,8 +29,8 @@
     <!--navigation-->
     <nav class="main-nav main-nav-closed">
       <ul class="main-nav__list">
-        <li class="main-nav__item main-nav__item--current">
-          <a class="main-nav__link" href="#">Главная</a>
+        <li class="main-nav__item">
+          <a class="main-nav__link main-nav__link--current" href="#">Главная</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link" href="./catalog.html">Каталог продукции</a>
