адаптивные сетки планшетной версии

--- a/source/form.html
+++ b/source/form.html
@@ -103,22 +103,22 @@
         </fieldset>
         <fieldset class="form__wrapper">
           <legend class="form__wrapper-title">Дополнительно</legend>
-          <ul class="form-list">
+          <ul class="form-list form-list--checkbox">
             <li class="form-list__item">
-              <label class="form-list__item-checkbox-label" for="sugar">сахарозаменитель</label>
               <input class="form-list__item-checkbox" type="checkbox" name="сахарозаменитель" id="sugar">
+              <label class="form-list__item-checkbox-label" for="sugar">сахарозаменитель</label>
             </li>
             <li class="form-list__item">
-              <label class="form-list__item-checkbox-label" for="water">питьевая вода</label>
               <input class="form-list__item-checkbox" type="checkbox" name="вода" id="water">
+              <label class="form-list__item-checkbox-label" for="water">питьевая вода</label>
             </li>
             <li class="form-list__item">
-              <label class="form-list__item-checkbox-label" for="milk">молоко</label>
               <input class="form-list__item-checkbox" type="checkbox" name="молоко" id="milk">
+              <label class="form-list__item-checkbox-label" for="milk">молоко</label>
             </li>
             <li class="form-list__item">
-              <label class="form-list__item-checkbox-label" for="vitamins">витамины</label>
               <input class="form-list__item-checkbox" type="checkbox" name="витамины" id="vitamins">
+              <label class="form-list__item-checkbox-label" for="vitamins">витамины</label>
             </li>
           </ul>
         </fieldset>
