версия главной страницы для пк

--- a/source/index.html
+++ b/source/index.html
@@ -104,33 +104,42 @@
     </section>
     <!--example section-->
     <section class="example">
+      <div class="example-title">
+        <h2 class="example-title__text">Живой пример</h2>
+      </div>
       <div class="example__wrapper">
-        <div class="example-text">
-          <h2 class="example-text__title">Живой пример</h2>
-          <span class="example-text__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
-            Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и
-            по-прежнему спит по 16 часов в день.</span>
-        </div>
-        <div class="example-cards-wrapper">
-          <div class="example-cards">
-            <div class="example-cards__item example-card">
-              <h3 class="example-card__title">5 кг</h3>
-              <span class="example-card__description">снижение веса</span>
-            </div>
-            <div class="example-cards__item example-card">
-              <h3 class="example-card__title">60 дней</h3>
-              <span class="example-card__description">затрачено времени</span>
+        <div class="example__wrapper-desktop">
+          <div class="example__wrapper-description">
+            <span class="example__wrapper-description-text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный
+              корм на
+              Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и
+              по-прежнему спит по 16 часов в день.</span>
+            <div class="example-cards-wrapper">
+              <div class="example-cards">
+                <div class="example-cards__item example-card">
+                  <h3 class="example-card__title">5 кг</h3>
+                  <span class="example-card__description">снижение веса</span>
+                </div>
+                <div class="example-cards__item example-card">
+                  <h3 class="example-card__title">60 дней</h3>
+                  <span class="example-card__description">затрачено времени</span>
+                </div>
+              </div>
+              <div class="example-costs">
+                <span class="example-costs__text">затраты на питание:</span>
+                <span class="example-costs__text"> 15 000 руб.</span>
+              </div>
             </div>
           </div>
-          <span class="example-cards__item example-costs">затраты на питание: 15 000 руб.</span>
-        </div>
-        <div class="example-cards__item cat-slider">
-          <div class="cat-slider__scale">
-            <button class="cat-slider__toggle" type="button">
-              <span class="visually-hidden">сравнить результат</span>
-            </button>
+          <div class="cat-slider">
+            <div class="cat-slider__scale">
+              <button class="cat-slider__toggle" type="button">
+                <span class="visually-hidden">сравнить результат</span>
+              </button>
+            </div>
           </div>
         </div>
+      </div>
       </div>
     </section>
     <!--contacts-->
