--- a/source/catalog.html
+++ b/source/catalog.html
@@ -257,61 +257,63 @@
       </ul>
     </section>
     <!--additional-goods-->
-    <section class="additional-goods">
-      <div class="additional-goods__wrapper">
-        <h2 class="additional-goods__title">Дополнительные товары</h2>
-        <ul class="additional-goods__list">
-          <li class="additional-goods__list-item">
-            <div class="additional-goods__list-item-wrapper">
-              <h3 class="additional-goods__list-item-title">сахарозаменитель</h3>
-              <div class="additional-goods__list-item-text-wrapper">
-                <span class="additional-goods__list-item-text">1 упаковка (100 г)</span>
-                <span class="additional-goods__list-item-text">200<span class="rub">&#8381;</span></span>
+    <div class="additional-gift-wrapper">
+      <section class="additional-goods">
+        <div class="additional-goods__wrapper">
+          <h2 class="additional-goods__title">Дополнительные товары</h2>
+          <ul class="additional-goods__list">
+            <li class="additional-goods__list-item">
+              <div class="additional-goods__list-item-wrapper">
+                <h3 class="additional-goods__list-item-title">сахарозаменитель</h3>
+                <div class="additional-goods__list-item-text-wrapper">
+                  <span class="additional-goods__list-item-text">1 упаковка (100 г)</span>
+                  <span class="additional-goods__list-item-text">200<span class="rub">&#8381;</span></span>
+                </div>
               </div>
-            </div>
-            <a class="additional-goods__button button" href="#">заказать</a>
-          </li>
-          <li class="additional-goods__list-item">
-            <div class="additional-goods__list-item-wrapper">
-              <h3 class="additional-goods__list-item-title">питьевая вода</h3>
-              <div class="additional-goods__list-item-text-wrapper">
-                <span class="additional-goods__list-item-text">5 литров</span>
-                <span class="additional-goods__list-item-text">50<span class="rub">&#8381;</span></span>
+              <a class="additional-goods__button button" href="#">заказать</a>
+            </li>
+            <li class="additional-goods__list-item">
+              <div class="additional-goods__list-item-wrapper">
+                <h3 class="additional-goods__list-item-title">питьевая вода</h3>
+                <div class="additional-goods__list-item-text-wrapper">
+                  <span class="additional-goods__list-item-text">5 литров</span>
+                  <span class="additional-goods__list-item-text">50<span class="rub">&#8381;</span></span>
+                </div>
               </div>
-            </div>
-            <a class="additional-goods__button button" href="#">заказать</a>
-          </li>
-          <li class="additional-goods__list-item">
-            <div class="additional-goods__list-item-wrapper">
-              <h3 class="additional-goods__list-item-title">молоко</h3>
-              <div class="additional-goods__list-item-text-wrapper">
-                <span class="additional-goods__list-item-text">1 литр</span>
-                <span class="additional-goods__list-item-text">100<span class="rub">&#8381;</span></span>
+              <a class="additional-goods__button button" href="#">заказать</a>
+            </li>
+            <li class="additional-goods__list-item">
+              <div class="additional-goods__list-item-wrapper">
+                <h3 class="additional-goods__list-item-title">молоко</h3>
+                <div class="additional-goods__list-item-text-wrapper">
+                  <span class="additional-goods__list-item-text">1 литр</span>
+                  <span class="additional-goods__list-item-text">100<span class="rub">&#8381;</span></span>
+                </div>
               </div>
-            </div>
-            <a class="additional-goods__button button" href="#">заказать</a>
-          </li>
-          <li class="additional-goods__list-item">
-            <div class="additional-goods__list-item-wrapper">
-              <h3 class="additional-goods__list-item-title">витамины</h3>
-              <div class="additional-goods__list-item-text-wrapper">
-                <span class="additional-goods__list-item-text">1 упаковка (30 г)</span>
-                <span class="additional-goods__list-item-text">300<span class="rub">&#8381;</span></span>
+              <a class="additional-goods__button button" href="#">заказать</a>
+            </li>
+            <li class="additional-goods__list-item">
+              <div class="additional-goods__list-item-wrapper">
+                <h3 class="additional-goods__list-item-title">витамины</h3>
+                <div class="additional-goods__list-item-text-wrapper">
+                  <span class="additional-goods__list-item-text">1 упаковка (30 г)</span>
+                  <span class="additional-goods__list-item-text">300<span class="rub">&#8381;</span></span>
+                </div>
               </div>
-            </div>
-            <a class="additional-goods__button button" href="#">заказать</a>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <!--gift-->
-    <section class="gift">
-      <h2 class="visually-hidden">Акция!</h2>
-      <div class="gift__wrapper">
-        <img class="gift__icon" src="./img/mobile/catalog/gift-icon.png" alt="подарок" width="78" height="80">
-        <span class="gift__text">Закажите все<br>и получите чехол для<br>кота в подарок!</span>
-      </div>
-    </section>
+              <a class="additional-goods__button button" href="#">заказать</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!--gift-->
+      <section class="gift">
+        <h2 class="visually-hidden">Акция!</h2>
+        <div class="gift__wrapper">
+          <img class="gift__icon" src="./img/mobile/catalog/gift-icon.png" alt="подарок" width="78" height="80">
+          <span class="gift__text">Закажите все<br>и получите чехол для<br>кота в подарок!</span>
+        </div>
+      </section>
+    </div>
     <!--contacts-->
     <section class="contacts">
       <div class="contacts__wrapper">
