--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
 
 <body class="page__body">
   <!--header-->
-  <header class="main-header">
+  <header class="main-header main-header--index">
     <div class="main-header__logo">
       <a href="./index.html" class="main-header__logo-link">
         <img class="main-header__logo-image" src="./img/logo-mobile.svg" width="33" height="38"
@@ -30,13 +30,13 @@
     <nav class="main-nav main-nav-closed">
       <ul class="main-nav__list">
         <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link--current" href="#">Главная</a>
+          <a class="main-nav__link main-nav__link--index main-nav__link--current main-nav__link--current-desktop" href="#">Главная</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link" href="./catalog.html">Каталог продукции</a>
+          <a class="main-nav__link main-nav__link--index" href="./catalog.html">Каталог продукции</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link" href="./form.html">Подбор программы</a>
+          <a class="main-nav__link main-nav__link--index" href="./form.html">Подбор программы</a>
         </li>
       </ul>
     </nav>
